traces/bug_503.txt
examples++-load/medit.cpp:524: error: DEAD_STORE
  The value written to &nbofsol (type int) is never used.
Showing all 1 steps of the trace


examples++-load/medit.cpp:524:5: Write of unused value
522.         eTh= CastTo<pmesh3>(args[1]);
523.         // }
524.       nbofsol = l.size();
           ^
525.       for (size_t i=2;i<args.size();i++){
526.         size_t jj=i-2;
